user-accounts: Make controls insensitive when a user is not selected

https://bugzilla.gnome.org/show_bug.cgi?id=671484l